--- a/main.html
+++ b/main.html
@@ -1,38 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping Cart</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 20px;
-      }
-      #product-list,
-      #cart-list {
-        list-style-type: none;
-        padding: 0;
-      }
-      .product-item,
-      .cart-item {
-        margin: 10px 0;
-      }
-      button {
-        cursor: pointer;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Product List</h1>
+</head>
+<body>
+    <h1>Products</h1>
     <ul id="product-list"></ul>
 
     <h2>Shopping Cart</h2>
     <ul id="cart-list"></ul>
-
     <button id="clear-cart-btn">Clear Cart</button>
 
     <script src="./script.js"></script>
-  </body>
+</body>
 </html>
