--- a/main.html
+++ b/main.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html>
+  <head>
     <title>Shopping Cart</title>
-</head>
-<body>
-    <h1>Products</h1>
+  </head>
+  <body>
+    <h1>Available Products</h1>
     <ul id="product-list"></ul>
-
     <h2>Shopping Cart</h2>
     <ul id="cart-list"></ul>
     <button id="clear-cart-btn">Clear Cart</button>
-
     <script src="./script.js"></script>
-</body>
+  </body>
 </html>
